--- a/amplify.yml
+++ b/amplify.yml
@@ -8,13 +8,14 @@ frontend:
         - node -v
         - npm ci --cache .npm --prefer-offline
         - npx prisma generate
-        - echo "DATABASE_URL=$DATABASE_URL" >> .env.local
+        - echo "DATABASE_URL=$DATABASE_URL" > .env.local
         - echo "NEXTAUTH_URL=$NEXTAUTH_URL" >> .env.local
         - echo "NEXTAUTH_SECRET=$NEXTAUTH_SECRET" >> .env.local
         - echo "AUTH_TRUST_HOST=$AUTH_TRUST_HOST" >> .env.local
         - echo "NEXTAUTH_DEBUG=$NEXTAUTH_DEBUG" >> .env.local
         - echo "NEXTAUTH_CSRF_CHECK_ORIGIN=$NEXTAUTH_CSRF_CHECK_ORIGIN" >> .env.local
         - echo "NEXTAUTH_URL_INTERNAL=$NEXTAUTH_URL_INTERNAL" >> .env.local
+        - cat .env.local
     build:
       commands:
         - npm run build
