🔧 Add Supabase env vars to amplify.yml build spec
Problem:
- amplify.yml erstellt .env.local OHNE Supabase Keys
- API konnte nicht auf Supabase zugreifen
- Environment Variables waren in AWS gesetzt aber nicht in .env.local

Fix:
- NEXT_PUBLIC_SUPABASE_URL
- NEXT_PUBLIC_SUPABASE_ANON_KEY (jetzt publishable key)
- SUPABASE_SERVICE_ROLE_KEY
werden jetzt in .env.local geschrieben

--- a/amplify.yml
+++ b/amplify.yml
@@ -15,6 +15,9 @@ frontend:
         - echo "NEXTAUTH_DEBUG=$NEXTAUTH_DEBUG" >> .env.local
         - echo "NEXTAUTH_CSRF_CHECK_ORIGIN=$NEXTAUTH_CSRF_CHECK_ORIGIN" >> .env.local
         - echo "NEXTAUTH_URL_INTERNAL=$NEXTAUTH_URL_INTERNAL" >> .env.local
+        - echo "NEXT_PUBLIC_SUPABASE_URL=$NEXT_PUBLIC_SUPABASE_URL" >> .env.local
+        - echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY" >> .env.local
+        - echo "SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY" >> .env.local
         - cat .env.local
     build:
       commands:
