--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,7 @@ frontend:
         - node -v
         - npm ci --cache .npm --prefer-offline
         - npx prisma generate
+        - echo "Building .env.local from Environment Variables..."
         - echo "DATABASE_URL=$DATABASE_URL" > .env.local
         - echo "NEXTAUTH_URL=$NEXTAUTH_URL" >> .env.local
         - echo "NEXTAUTH_SECRET=$NEXTAUTH_SECRET" >> .env.local
@@ -18,6 +19,7 @@ frontend:
         - echo "NEXT_PUBLIC_SUPABASE_URL=$NEXT_PUBLIC_SUPABASE_URL" >> .env.local
         - echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY" >> .env.local
         - echo "SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY" >> .env.local
+        - echo "✅ Environment variables loaded:"
         - cat .env.local
     build:
       commands:
